--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -9,7 +9,8 @@ RUN apt update && \
     useradd -r -g mysql mysql && \
     mkdir /var/lib/mysql-files && \
     mkdir /var/run/mysqld/ && \
-    chown mysql:mysql /var/run/mysqld
+    chown mysql:mysql /var/run/mysqld && \
+    mkdir /docker-entrypoint-initdb.d
 
 COPY ./my.cnf /etc/mysql/my.cnf
 COPY ./start.sh /start.sh
@@ -20,9 +21,7 @@ COPY --from=mysql /usr/bin/mysqladmin /usr/bin
 COPY --from=mysql /usr/bin/mysql_install_db /usr/bin
 COPY --from=mysql /usr/bin/mysql_tzinfo_to_sql /usr/bin
 
-COPY --from=mysql /lib/x86_64-linux-gnu/libaio.so.1 /usr/lib/x86_64-linux-gnu
-COPY --from=mysql /lib/x86_64-linux-gnu/libncurses.so.5 /usr/lib/x86_64-linux-gnu
-COPY --from=mysql /lib/x86_64-linux-gnu/libtinfo.so.5 /usr/lib/x86_64-linux-gnu
+COPY --from=mysql /usr/lib/x86_64-linux-gnu/libaio.so.1 /usr/lib/x86_64-linux-gnu
 COPY --from=mysql /usr/lib/x86_64-linux-gnu/libnuma.so.1 /usr/lib/x86_64-linux-gnu
 COPY --from=mysql /usr/share/mysql /usr/share/mysql 
 COPY --from=mysql /entrypoint.sh /entrypoint.sh
